* Changelog
** [Unreleased]
*** Added
- Create repository
** [0.0.6] - 2020-03-29
*** Added
- POP3CSImplementation.h & POP3CSClient.h Files
*** Changed
- Split ProtoInterface.h into seperate Files
** [0.0.5] - 2020-03-15
*** Added
- Add protobuff test directorypop3.proto to src
- Add protobuff build to meson
- Add ProtoInterface class
- Add ProtoBuff handler functions
- Include grpc Library
- Add grpc Server Class
- Add grpc Client Class
- Add grpc routes to pop3.proto
- Add grpc routes to Server Class
- Add grpc routes to Client Class
- Add error handling to JSON Parser
- Add Introduction Section to Documentation
- Add References to Documentation
- Add Class Diagram to Documentation
- Add Implementation Section to Documentation
- Add Code Section to Documentation
- Add Library Section to Documentation
- Add grpc/protobuf Sections to Documentation
- Add Usage Section to Documentation
- Add Project Structure Section to Documentation
- Add Usage example to README.md
*** Changed
- Update meson.build file
- Add a few sections to README.md
- Update meson.build to feature grpc
- Rewrote Interactive Class to use gRPC client as communication medium
- Clean up ProtoInterface.h
- Move Console spdlog entries to Interactive class
- Implement changes from "Zwischenstand"
** [0.0.4] - 2020-03-08
*** Added
- Add basic socket to pop3client Class
- Add basic resolver to pop3client Class
- Add read and write methods to pop3client Class
- Add GnuTLS support to pop3client Class (Setup, read/write methods)
- Add utils files for support classes
- Add write_to_file method to utils class, to enable mails to be written as .eml files
- Add documentation TeX structure & references File
- Include spdlog Library
- Add basic spdlog file sink
- Add basic error handling to establish_connection function
- Add split functions to utils.cpp
- Add delete_message function to pop3client class
- Add get_total_messages function to pop3client class
- Add retrieve_messages function to pop3client class