@@ -1,5 +1,6 @@
-# option('asio_include_dir', type : 'string', value : '/Users/david/Desktop/HTL/NVS/include_external/asio', description : 'the include dir of asio')
 option('cli11_include_dir', type : 'string', value : '/Users/david/Desktop/HTL/NVS/include_external/CLI11', description : 'the dir containing CLI11.hpp')
 option('json_include_dir', type : 'string', value : '/Users/david/Desktop/HTL/NVS/include_external/json', description : 'the include dir of json')
 option('spdlog_include_dir', type : 'string', value : '/Users/david/Desktop/HTL/NVS/include_external/spdlog', description : 'the include dir of spdlog')
 option('tabulate_include_dir', type : 'string', value : '/Users/david/Desktop/HTL/NVS/include_external/tab/', description : 'the dir containing tabulate.hpp')
+option('httplib_include_dir', type : 'string', value : '/Users/david/Desktop/HTL/NVS/include_external/httplib/', description : 'the dir containing httplib.h')
+option('inja_include_dir', type : 'string', value : '/Users/david/Desktop/HTL/NVS/include_external/inja/inja/', description : 'the dir containing inja.hpp')
